<resources>
    <!--APP全局通用-->
    <string name="app_menu_game">视游乐</string>
    <string name="app_menu_app">应用乐</string>
    <string name="app_menu_settins">设置</string>
    <string name="app_menu_feedback">意见反馈</string>
    <string name="app_menu_help">帮助</string>
    <string name="app_menu_about">关于</string>

    <!--LoginActivity-->
    <string name="login_menu_register">注册</string>

    <string name="app_name">WiFi+TV</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_empty">精彩功能开发中，敬请期待</string>
    <string name="app_exception">程序异常,未知错误</string>
    <string name="empty_programinfo">没有更多内容了</string>
    <!-- HomeWiFiSettings -->
    <string name="home_listview_ada_nocipher">"开放"</string>
    <string name="home_listview_ada_wpacipher">"通过WPA\\WPA2保护"</string>
    <string name="home_listview_ada_wepcipher">"通过WEP保护"</string>
    <string name="home_listview_ada_eapcipher">"通过EAP保护"</string>
    <!--MainActivity-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_loading">WiFiTV</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="main_tab_video">观影乐</string>
    <string name="main_tab_live">直播乐</string>
    <string name="main_tab_program">点播乐</string>
    <string name="main_tab_game">视游乐</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_life">乐生活</string>
    <string name="main_tab_my">我</string>
    <!--Live-->
    <string name="channel_list">直播频道</string>
    <!--program-->
    <string name="empty_gridview">这里什么都没有耶</string>
    <string name="back">返回</string>
    <string name="detail">详情</string>
    <!-- 个人信息页 -->
    <string name="user_name">游客</string>
    <string name="user_location">位置信息未知</string>
    <string name="user_coupons">我的卡券</string>
    <string name="user_wealth">我的积分</string>
    <string name="user_collection">我的收藏</string>
    <string name="user_set">设置</string>
    <string name="user_help">帮助</string>
    <string name="user_about">关于</string>
    <string name="user_feedback">意见反馈</string>
    <string name="user_login">登录</string>
    <string name="user_logoff">注销登录</string>
    <!-- LoginActivity -->
    <string name="login_lost_password"><u>忘记密码</u></string>
    <string name="login_failed">登录失败，请稍后重试 </string>
    <string name="login_success">登录成功！</string>
    <string name="regist_failed">注册失败，请稍后重试</string>
    <string name="regist_success">注册成功！</string>
    <string name="regist_email">输入邮箱地址</string>
    <string name="regist_regist">注 册</string>
    <string name="regist_username">输入用户名</string>
    <string name="regist_passwd">请输入6到16位字母或数字</string>
    <string name="regist_repeat">重复输入密码</string>
    <string name="regist_agree">我已阅读并同意《享看用户注册协议》</string>
    <string name="login_message">登录我的享看</string>
    <string name="login_login">登录</string>
    <!--common-->
    <string name="desc_img">img</string>
    <string name="net_exception">网络错误，请检查您的网络设置</string>

    <!-- 关于 -->
    <string name="about_join"><u>招商加盟</u></string>
    <string name="about_company">成都金亚云媒互联网科技有限公司</string>
    <string name="about_company_detail">金亚科技（创业板上市公司，股票代码300028）旗下子公司</string>
    <string name="about_product_describle_1">云媒享看WiFiTV，利用现有的光电资源，将电视节目</string>
    <string name="about_product_describle_2">和移动互联网有机的结合起来，在公共场所采用智能</string>
    <string name="about_product_describle_3">网元与WiFi覆盖的模式，让您随时随地看电视！</string>
    <string name="about_product_describle_4">WiFiTV ---口袋TV新玩法</string>
    <string name="about_version">当前版本： 享看3.0</string>
    <string name="about_button_checkversion">检测更新</string>
    <string name="about_app">金亚享看Android版</string>
    <string name="about_app_copyright">Copyright2015金亚享看版权所有</string>
    <string name="no_update">版本已经最新</string>
    <string name="checkupdate">检查更新</string>
    <string name="update_now">立即更新</string>
    <string name="update_after">稍后更新</string>
    <!-- 招商加盟 -->
    <string name="join_title">招商加盟</string>
    <string name="join_name">姓名：</string>
    <string name="join_star">*</string>
    <string name="join_tel">电话：</string>
    <string name="join_leave">留言：</string>
    <string name="join_button_text">提交</string>
    <string name="join_leave_et_hint">请在此输入15－150个字符</string>
    <!--设置-->
    <string name="setting_checkwifi">自动检测可用wifi连接</string>
    <string name="setting_notice">接受推送</string>
    <string name="setting_update">自动更新</string>
    <string name="setting_downloadpath">游戏、应用下载路径</string>
    <string name="setting_default">[默认目录]</string>
    <string name="setting_clearcache">清理缓存</string>
    <string name="setting_reset">恢复默认设置</string>
    <string name="setting_lastfolder">上一级</string>
    <string name="setting_new">新建文件夹</string>
    <string name="wealth">积分</string>
    <string name="wealth_total">积分：</string>
    <string name="wealth_histroy"><u>兑换历史</u></string>
    <!-- 现金券，优惠券 -->
    <string name="discount_detail">麦当劳优惠券 (手机优惠券)\n香骨鸡腿+可口可乐 优惠价</string>
    <string name="discount_validity">有效期截止2015年6月28日</string>
    <string name="discount_price">￥16</string>
    <string name="discount_useway">出示使用</string>
    <!-- 帮助 -->
    <string name="help_account">账户问题</string>
    <string name="help_alipay">购买支付宝问题</string>
    <string name="help_video">直播、点播观看问题</string>
    <string name="help_download">游戏、应用下载问题</string>
    <string name="help_cooperation">商务合作问题</string>
    <string name="help_account_detail_lost_q">问 ：忘记登录密码怎么办</string>
    <string name="help_account_detail_lost_a">答：请您在登录界面点击“忘记密码”, 进入“找回密码页面”， 按提示操作即可通过短信验证码找回密码</string>
</resources>