<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv_about_bottom"
        android:orientation="vertical">
<!--
        <include layout="@layout/activity_titlebar" />
-->
        <TextView
            android:id="@+id/tv_about_cooperation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/about_join"
            android:textColor="@color/orange" />

        <ImageView
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@mipmap/activity_about_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/about_company"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/about_company_detail"
            android:textColor="@color/orange"
            android:textSize="8sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/about_product_describle_1"
            android:textColor="@color/gray_text"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/about_product_describle_2"
            android:textColor="@color/gray_text"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/about_product_describle_3"
            android:textColor="@color/gray_text"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/about_product_describle_4"
            android:textColor="@color/gray_text"
            android:textSize="12sp" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/about_version"
                    android:textColor="@color/gray_text"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/bt_about_update"
                    android:layout_width="220dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/activity_about_bt_bg"
                    android:gravity="center"
                    android:text="@string/about_button_checkversion"
                    android:textSize="12sp" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_about_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/about_app"
        android:textColor="@color/gray_text"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/about_app_copyright"
        android:textColor="@color/gray_text"
        android:textSize="12sp" />
</RelativeLayout>
