<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/program_gridview_background_selector"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_discount_item_describle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginStart="6dp"
            android:text="@string/discount_detail"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/iv_discount_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_discount_item_describle"
            android:layout_marginBottom="90dp"
            android:layout_marginTop="5dp"
            android:background="@mipmap/fragment_discount_item_image" />

        <TextView
            android:id="@+id/tv_discount_item_validity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/discount_validity"
            android:textColor="@color/green"
            android:textSize="10dp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:background="@mipmap/fragment_discount_price_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/discount_price"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@mipmap/fragment_discount_item_bt_bg"
            android:gravity="center"
            android:text="@string/discount_useway"
            android:textColor="@color/green"
            android:textSize="10sp" />
    </FrameLayout>
</FrameLayout>
